--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <p class="bold slide-right">7+3=11 kan yaa</p>
       
       <div id="Tombol">
-       <a id="By" onClick="fungsipertama()">Tombol Fungsi Pertama</a>
-       <a id="Bn" onClick="fungsikedua()">Tombol Fungsi Kedua</a>
+       <a id="By" onClick="fungsipertama()">apayahhhh</a>
+       <a id="Bn" onClick="fungsikedua()">iyaa</a>
      </div>
   </section>
   
@@ -113,4 +113,5 @@ const body = document.querySelector("body"); initom.style="opacity:0;bottom:0;tr
 </script>
 <script src="https://feeldreams.github.io/maukahkamu/main.js"></script>
 </body>
+
 </html>
